--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.60",
     "@assistant-ui/react": "^0.5",
+    "@assistant-ui/react-ai-sdk": "^0.6.13",
     "@assistant-ui/react-markdown": "^0.2",
+    "@langchain/community": "^0.3.10",
+    "@langchain/core": "^0.3.11",
+    "@langchain/openai": "^0.3.11",
+    "ai": "^3.4.10",
+    "cheerio": "^1.0.0",
+    "langchain": "^0.3.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
