--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@assistant-ui/react-markdown": "^0.2",
     "@langchain/community": "^0.3.10",
     "@langchain/core": "^0.3.11",
+    "@langchain/ollama": "^0.1.0",
     "@langchain/openai": "^0.3.11",
     "ai": "^3.4.10",
     "cheerio": "^1.0.0",
     "langchain": "^0.3.2",
     "next": "14.2.11",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss-animate": "^1.0.7",
